--- a/npm/package.json
+++ b/npm/package.json
@@ -4,8 +4,20 @@
   "description": "project npm pzn",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ahsantawil",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module",
+  "exports": {
+    ".": "./index.js",
+    "./write": "./write.js"
+  },
+  "dependencies": {
+    "lodash": "4.17.21"
+  },
+  "devDependencies": {
+    "moment": "^2.29.4"
+  }
 }
