--- a/npm/package.json
+++ b/npm/package.json
@@ -15,6 +15,7 @@
     "./write": "./write.js"
   },
   "dependencies": {
+    "belajar-library-nodejs": "^1.1.1",
     "lodash": "4.17.21"
   },
   "devDependencies": {
