--- a/logging/package.json
+++ b/logging/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.0.3"
   },
   "dependencies": {
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
