--- a/express/package.json
+++ b/express/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "path-to-regexp": "^6.2.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
