--- a/express/package.json
+++ b/express/package.json
@@ -23,9 +23,12 @@
     "supertest": "^6.2.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "mustache-express": "^1.3.2",
     "path-to-regexp": "^6.2.1",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "express-fileupload": "^1.4.0"
   }
 }
